--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       	<ul>
       		<li><a href=""></a></li>
       		<li><a href="contacts.html">Contacts</a></li>
-      		<li><a href="login.php"class="btn btn-success">Login</a></li>
+      		<li><a href="login.html"class="btn btn-success">Login</a></li>
         </ul>
       	
       </nav>
